--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
+title: Jesse's Epic Stuff
+author: broncbuster3
+email: jesseneal9@gmail.com
+theme: minima
+description: > This site shows all the things that I have learned to do. This includes programming, woodwork, vinyl wraps, and any other stuff I would like to show off. # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
