--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jesse's Epic Stuff
-author: broncbuster3
-email: jesseneal9@gmail.com
+author: GitHub username broncbuster3
+email: Email jesseneal9@gmail.com
 theme: minima
 description: > This site shows all the things that I have learned to do. This includes programming, woodwork, vinyl wraps, and any other stuff I would like to show off. # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
