--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
+---
 title: Jesse's Epic Stuff
+date: 2021-06-18
+---
 author: GitHub username broncbuster3
 email: Email jesseneal9@gmail.com
 theme: minima
