--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
----
-title: "Jesse's Epic Stuff"
-date: 2021-06-18
----
+title: Jesse's Epic Stuff
 author: GitHub username broncbuster3
 email: Email jesseneal9@gmail.com
 theme: minima
