--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,7 @@ title: Jesse's Epic Stuff
 author: GitHub username broncbuster3
 email: Email jesseneal9@gmail.com
 theme: minima
-description: > This site shows all the things that I have learned to do. This includes programming, woodwork, vinyl wraps, and any other stuff I would like to show off. # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > This site shows all the things that I have learned to do. This includes programming, woodwork, vinyl wraps, and any other stuff I would like to show off.
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
