--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jesse's Epic Stuff
 author: Jesse Neal
 email: Email jesseneal9@gmail.com
 theme: minima
-description: This site shows all the things that I have learned to do. This includes programming, woodwork, vinyl wraps, and any other stuff I like to show off.
+description: This site shows all the things that I have learned to do. This includes programming, woodwork, and other stuff I like to show off.
 
 # social links
 github_username:  broncbuster3
